--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         .wallet-section input[type="text"] {
             width: 100%;
             padding: 10px;
+            background-color: #e9ecef;
             margin-bottom: 20px;
             border-radius: 4px;
             border: 1px solid #ccc;
