--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             background-color: #00aaff;
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 10px;
             cursor: pointer;
             font-size: 16px;
         }
@@ -54,7 +54,8 @@
         .wallet-address {
             margin-top: 20px;
             padding: 10px;
-            background-color: #e9ecef;
+            background-color: #2d2d2d;
+            color: white;
             border-radius: 4px;
             text-align: center;
             word-wrap: break-word;
@@ -99,7 +100,7 @@
             background-color: #28a745;
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 10px;
             text-align: center;
             text-decoration: none;
             font-size: 16px;
